aligned all items correctly

--- a/src/index.css
+++ b/src/index.css
@@ -30,12 +30,6 @@ code {
       justify-content: space-evenly;
 }
 
-.interact{
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: end;
-}
-
 .dataOperation {
   color: rgb(0, 0, 0);
   flex-direction: row;
@@ -53,9 +47,8 @@ code {
   color: rgb(0, 0, 0);
   display: flex;
   flex-direction: column;
-
-  padding:0.5vh;
-
+  justify-content: start;
+  padding:2.5vh;
 }
 
 .litem {
@@ -67,7 +60,9 @@ code {
   color: rgb(0, 0, 0);
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: start;
+
 }
 .combineCode {
   color: rgb(0, 0, 0);
@@ -77,21 +72,37 @@ code {
 
 .ui {
   color: rgb(0, 0, 0);
-  display: flex;
-  flex-direction: column;
+  grid-template-rows: 20px 1000 auto;
+  grid-template-areas:
+    "sectionName"
+    "interface"
+    "display";
+  row-gap: 20px;
 }
 
 .interact {
   color: rgb(0, 0, 0);
-  justify-content: space-evenly;
-  align-items: flex-end;
-  padding-bottom: 3vh;
-
+  justify-content: end;
+  align-self: left;
+  grid-area: interface;
+  display: flex;
+  flex-direction:column;
+  height: 210px;
+  padding-bottom: 20px;
   }
+
+.manager p {
+  grid-area: sectionName;
+  height: 5vh;
+  font-size: 20px;
+  font-weight: 700;
+}
 
 .display {
     outline: 3px solid rgb(77, 126, 189);
     padding: 1vh;
+    grid-area: display;
+    justify-self: start;
 }
 
 a {
